--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
