--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.2",
+    "react-spinners": "^0.14.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
